# computer_club

./: CMakeLists.txt  README.md  main.cpp  system.drawio  test_assignment.docx  uml.drawio
Club/: CMakeLists.txt  Club.cpp  Club.hpp  ClubConfig.cpp  ClubConfig.hpp
Event/: BaseEvent.cpp  BaseEvent.hpp  CMakeLists.txt  ClientEvent.cpp  ClientEvent.hpp  EmptyEvent.cpp  EmptyEvent.hpp  EndEvent.cpp  EndEvent.hpp  ErrorEvent.cpp  ErrorEvent.hpp  Event.hpp  EventConfig.hpp  EventFactory.cpp  EventFactory.hpp  EventType.hpp  InfoEvent.cpp  InfoEvent.hpp  TableEvent.cpp  TableEvent.hpp
EventHandler/: CMakeLists.txt  EventHandler.cpp  EventHandler.hpp
Outputter/: CMakeLists.txt  Outputter.cpp  Outputter.hpp
Parser/: CMakeLists.txt  Parser.cpp  Parser.hpp
Pipeline/: CMakeLists.txt  Pipeline.cpp  Pipeline.hpp
Table/: CMakeLists.txt  Table.cpp  Table.hpp
Time/: CMakeLists.txt  Time.cpp  Time.hpp
test_files/: errors_test.txt  test_file1.txt  test_file2.txt  test_file3.txt
